--- a/gateway-contracts/.env.example
+++ b/gateway-contracts/.env.example
@@ -55,24 +55,30 @@ KMS_SIGNER_ADDRESS_3="0xDb216ECeC4cEd51CdfD9609b6Ce7653aB04f6cAd" # accounts[10]
 KMS_NODE_IP_ADDRESS_3="127.0.0.4" # (string)
 KMS_NODE_STORAGE_URL_3="s3://kms-bucket-4" # (string)
 
+# Coprocessor feature set
+COPROCESSORS_FEATURE_SET="1" # (uint256)
+
 # Coprocessors
 # The number of coprocessors must be lower or equal to the number of coprocessors' metadata defined below
 NUM_COPROCESSORS="3" # (number)
 
 # Coprocessor 1
+COPROCESSOR_NAME_0="Coprocessor 1" # (string)
 COPROCESSOR_TX_SENDER_ADDRESS_0="0x6518D50aDc9036Df37119eA465a8159E34417E2E" # accounts[11] (address)
 COPROCESSOR_SIGNER_ADDRESS_0="0xa5eE8292dA52d8234248709F3E217ffEBA5E8312" # accounts[12] (address)
-COPROCESSOR_S3_BUCKET_URL_0="s3://coprocessor-bucket-1" # (string)
+COPROCESSOR_STORAGE_URL_0="s3://coprocessor-bucket-1" # (string)
 
 # Coprocessor 2
+COPROCESSOR_NAME_1="Coprocessor 2" # (string)
 COPROCESSOR_TX_SENDER_ADDRESS_1="0xCFbF539CB91c92ace0343c5B0487149Ad0b82078" # accounts[13] (address)
 COPROCESSOR_SIGNER_ADDRESS_1="0xA951F315d5FD35Cac111dFB5250DF231FB8eF905" # accounts[14] (address)
-COPROCESSOR_S3_BUCKET_URL_1="s3://coprocessor-bucket-2" # (string)
+COPROCESSOR_STORAGE_URL_1="s3://coprocessor-bucket-2" # (string)
 
 # Coprocessor 3
+COPROCESSOR_NAME_2="Coprocessor 3" # (string)
 COPROCESSOR_TX_SENDER_ADDRESS_2="0x3C0033584da3A0f61AA5C7bde50eAF3642875a21" # accounts[15] (address)
 COPROCESSOR_SIGNER_ADDRESS_2="0x420AF5A5BBfAd922aE5a501d9a8Bf70a55F52E03" # accounts[16] (address)
-COPROCESSOR_S3_BUCKET_URL_2="s3://coprocessor-bucket-3" # (string)
+COPROCESSOR_STORAGE_URL_2="s3://coprocessor-bucket-3" # (string)
 
 # Custodians
 # The number of custodians must be lower or equal to the number of custodians' metadata defined below
