--- a/coprocessor/fhevm-engine/Cargo.toml
+++ b/coprocessor/fhevm-engine/Cargo.toml
@@ -86,3 +86,7 @@ overflow-checks = false
 [profile.release]
 opt-level = 3
 lto = "fat"
+debug = true
+
+[profile.bench.build-override]
+debug = true
